tests/liquid/pos/heap-st02.js
/*@ foo :: (<l>)/l |-> {a:{number | v = 1}} =>
            void/l |-> {a:{number | v > 0 }} */
function foo(p) {
    return;
}
